--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 <body>
     <div style="text-align: center;" class="topnav">
        
+      <div class="topnavtext">
         <p>Soluções em caixa - Confira agora</p>
+      </div>
+      <div class="topnavicon" style="position: absolute; top: 10px; left: 0; right: 0;">
+        <i class='fa-brands fa-whatsapp' style='font-size:20px;color: rgb(255, 255, 255); margin-right:7px'></i>
+        <i class='fa-brands fa-facebook' style='font-size:20px;color: rgb(255, 255, 255); margin-right:7px'></i>
+        <i class='fa-brands fa-instagram' style='font-size:20px;color: rgb(255, 255, 255);'></i>
+        
+      </div>
 
     </div>
 
@@ -131,7 +139,7 @@
       </div>
 
 
-<div class="textvin" style="position: absolute; top: 110%">
+<div class="textvin" style="position: absolute; top: 100%">
 
 <h1 align="left"  >Orçamento</h1>
 
@@ -142,7 +150,7 @@
 </div>
 
 
-<div class="form1" style = "position: absolute; top: 170%;">
+<div class="form1 forminput" style = "position: absolute; top: 170%;">
     <form>
         <!-- Name input -->
         <div class="form-outline mb-4 ">
@@ -252,14 +260,24 @@
    
   
     <!-- Copyright -->
-    <div class="text-center p-4 footercolor" style = "width:1350px; position: absolute; top: 60%;" style=" background-color: rgb(255, 0, 0);">
+
+    <div >
+    <div class="text-center p-4 footercolor" style = "width:1350px; position: absolute; top: 55%;" style=" background-color: rgb(255, 0, 0);">
      <h4> ECO CAIXA © 2023 Copyright. Todos os direitos reservados. </h4>
       <p class="text-reset fw-bold" >Eco Caixas comercio e fabrica de caixas de papelão LTDA<br>CNPJ 42.120.687/0001-49<br>Rua Dom Bosco,727 - Mooca  São Paulo/SP - CEP 03.105-020</p>
     </div>
+  </div>
+
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
-
+  <div class="footere">
+    <div class="icon-text">
+      <i class="fa-brands fa-whatsapp" style="margin-right:7px"></i>
+      <span>  Atendimento via WhatsApp (11) 3277-0799</span>
+    </div>
+  
+  </div>
 </div>
 
 
